--- a/src/Vts/Common/Resources/Strings.resx
+++ b/src/Vts/Common/Resources/Strings.resx
@@ -133,7 +133,7 @@
     <value>R</value>
   </data>
   <data name="ForwardSolverType_MonteCarlo" xml:space="preserve">
-    <value>Scaled Monte Carlo (g=0.8, n=1.4)</value>
+    <value>Scaled Monte Carlo - Basic (g=0.8, n=1.4)</value>
   </data>
   <data name="ForwardSolverType_PointSDA" xml:space="preserve">
     <value>Standard Diffusion (Analytic - Point Source)</value>
@@ -311,5 +311,8 @@
   </data>
   <data name="ScatteringType_PowerLaw" xml:space="preserve">
     <value>Power Law [A*λ^(-b)]</value>
+  </data>
+  <data name="ForwardSolverType_Nurbs" xml:space="preserve">
+    <value>Scaled Monte Carlo - NURBS (g=0.8, n=1.4)</value>
   </data>
 </root>
