--- a/src/Vts/Common/Resources/Strings.resx
+++ b/src/Vts/Common/Resources/Strings.resx
@@ -112,10 +112,10 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ForwardAnalysisType_dRdIV" xml:space="preserve">
     <value>∂R/∂IV</value>
@@ -136,7 +136,7 @@
     <value>Scaled Monte Carlo - Basic (g=0.8, n=1.4)</value>
   </data>
   <data name="ForwardSolverType_PointSourceSDA" xml:space="preserve">
-    <value>Standard Diffusion (Analytic - Point Source)</value>
+    <value>Standard Diffusion (Analytic - Isotropic Point Source)</value>
   </data>
   <data name="IndependentVariableAxis_Rho" xml:space="preserve">
     <value>ρ</value>
@@ -280,7 +280,7 @@
     <value>Standard Diffusion (Analytic - Distributed Gaussian Source)</value>
   </data>
   <data name="ForwardSolverType_DistributedPointSourceSDA" xml:space="preserve">
-    <value>Standard Diffusion (Analytic - Distributed Line Source)</value>
+    <value>Standard Diffusion (Analytic - Distributed Point Source)</value>
   </data>
   <data name="MapType_AbsorbedEnergy" xml:space="preserve">
     <value>A (Absorbed Energy)</value>
