--- a/src/Vts.SiteVisit/Resources/Strings.resx
+++ b/src/Vts.SiteVisit/Resources/Strings.resx
@@ -112,10 +112,10 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Button_GenerateFluence" xml:space="preserve">
     <value>Generate Fluence/Interrogation Map</value>
@@ -347,5 +347,23 @@
   </data>
   <data name="Label_ZMax" xml:space="preserve">
     <value>z_max</value>
+  </data>
+  <data name="Label_AutoScaleX" xml:space="preserve">
+    <value>Auto-X</value>
+  </data>
+  <data name="Label_AutoScaleY" xml:space="preserve">
+    <value>Auto-Y</value>
+  </data>
+  <data name="Label_MaxX" xml:space="preserve">
+    <value>Max X:</value>
+  </data>
+  <data name="Label_MaxY" xml:space="preserve">
+    <value>Max Y:</value>
+  </data>
+  <data name="Label_MinX" xml:space="preserve">
+    <value>Min X:</value>
+  </data>
+  <data name="Label_MinY" xml:space="preserve">
+    <value>Min Y:</value>
   </data>
 </root>
