Added an update button to the Spectral Panel to update optical properties

--- a/src/Vts.SiteVisit/Resources/Strings.resx
+++ b/src/Vts.SiteVisit/Resources/Strings.resx
@@ -130,7 +130,7 @@
     <value>Plot Measured Data</value>
   </data>
   <data name="Button_PlotMua" xml:space="preserve">
-    <value>Plot μa Spectum</value>
+    <value>Plot μa Spectrum</value>
   </data>
   <data name="Button_PlotMusPrime" xml:space="preserve">
     <value>Plot μs' Spectrum</value>
