Added code to the MapViewModel.cs to load strings from resources. Renamed StringExtensions.cs to StringLookup.cs to more accurately describe what it does.

--- a/src/Vts.SiteVisit/Resources/Strings.resx
+++ b/src/Vts.SiteVisit/Resources/Strings.resx
@@ -366,4 +366,10 @@
   <data name="Label_MinY" xml:space="preserve">
     <value>Min Y:</value>
   </data>
+  <data name="Label_ColormapType" xml:space="preserve">
+    <value>Colormap Type:</value>
+  </data>
+  <data name="Label_ScalingType" xml:space="preserve">
+    <value>Scaling Type:</value>
+  </data>
 </root>
