Added Time Frequency Domain to Fluence/Absorbed Energy/PHD mapping capabilities. Needs review by smarter people.

--- a/src/Vts.Gui.Silverlight/Resources/Strings.resx
+++ b/src/Vts.Gui.Silverlight/Resources/Strings.resx
@@ -372,4 +372,10 @@
   <data name="Label_ScalingType" xml:space="preserve">
     <value>Scaling Type:</value>
   </data>
+  <data name="Label_ModulationFrequency" xml:space="preserve">
+    <value>Modulation Frequency:</value>
+  </data>
+  <data name="Measurement_GHz" xml:space="preserve">
+    <value>GHz</value>
+  </data>
 </root>
