GUI: Modifications to get real/imag and phase/amp plots with plot toggle between the two for both Forward and Inverse Solver Panels.  Changes include: 1) new ComplexPoint class that is point (X,Y) but with Complex Y, 2) major mods to PlotViewModel include overload to AddValuesToPlotData that takes list of ComplexPoint rather than Point, IsComplexPlot flag that is set by Forward/ Inverse Solver command, code to handle changing plot labels between toggle and clearing of last or all plots, xaml to make radio toggle only visible when complex plot. 3) Added IList<ComplexPoint> to PlotData and 2nd title and color for 2nd complex plot.

--- a/src/Vts.Gui.Silverlight/Resources/Strings.resx
+++ b/src/Vts.Gui.Silverlight/Resources/Strings.resx
@@ -309,6 +309,9 @@
   <data name="Label_HoldOn" xml:space="preserve">
     <value>Hold On</value>
   </data>
+  <data name="Label_PlotToggle" xml:space="preserve">
+    <value>Plot Toggle:</value>
+  </data>
   <data name="Label_Normalization" xml:space="preserve">
     <value>Normalization:</value>
   </data>
