GUI: updated pull down name for two-layer SDA.
--HG--
branch : ch-130710-multiregion_forward_solver

--- a/src/Vts/Common/Resources/Strings.resx
+++ b/src/Vts/Common/Resources/Strings.resx
@@ -138,6 +138,9 @@
   <data name="ForwardSolverType_PointSourceSDA" xml:space="preserve">
     <value>Standard Diffusion (Analytic - Isotropic Point Source)</value>
   </data>
+  <data name="ForwardSolverType_TwoLayerSDA" xml:space="preserve">
+    <value>Two Layer SDA - Beta version R(ρ) only</value>
+  </data>
   <data name="IndependentVariableAxis_Rho" xml:space="preserve">
     <value>ρ</value>
   </data>
