Refactored ComputationFactory.ComputeReflectance to allow multiplexing across all dimensions. ComputationFactory.SolveInverse still needs updating. Todo: - consider reflection-based parameter list at factory level - consider using ranges for all solution domain axes - develop multi-axis plotting capability
--HG--
branch : c-131208-spectral_fs_gui_changes

--- a/src/Vts.Gui.Silverlight/Resources/Strings.resx
+++ b/src/Vts.Gui.Silverlight/Resources/Strings.resx
@@ -232,7 +232,7 @@
     <value>A(ρ,z,t)</value>
   </data>
   <data name="Label_IndependentAxis" xml:space="preserve">
-    <value>Independent Axis:</value>
+    <value>Independent Axis</value>
   </data>
   <data name="Label_PHDOfFxAndZ" xml:space="preserve">
     <value>phd(fx,z)</value>
