Modified Assembly version to 2.0.  Also took "Beta version" off 2-layer SDA pull down text.
--HG--
branch : dc-140620-2p0

--- a/src/Vts/Common/Resources/Strings.resx
+++ b/src/Vts/Common/Resources/Strings.resx
@@ -139,7 +139,7 @@
     <value>Standard Diffusion (Analytic: Isotropic Point Source)</value>
   </data>
   <data name="ForwardSolverType_TwoLayerSDA" xml:space="preserve">
-    <value>Two Layer SDA - Beta version</value>
+    <value>Two Layer SDA</value>
   </data>
   <data name="IndependentVariableAxis_Rho" xml:space="preserve">
     <value>ρ</value>
